[package]
name = "botip"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["kv_unstable"] }
tera = "1.17.0"
